--- a/frontend/src/app/components/home-page/home-page.component.scss
+++ b/frontend/src/app/components/home-page/home-page.component.scss
@@ -1,4 +1,4 @@
-ul{
+ul {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,7 +7,7 @@ ul{
     padding: 0;
 }
 
-ul li a{
+ul li a {
     height: wrap-content;
     width: 20rem;
     // padding-bottom: 2rem;
@@ -19,10 +19,12 @@ ul li a{
     overflow: hidden;
     color: black;
 }
-li a:hover{
+
+li a:hover {
     opacity: 0.9;
     cursor: pointer;
 }
+
 .content {
     position: relative; // Ensure the content div is positioned relatively
     margin: 0.5rem;
@@ -31,14 +33,17 @@ li a:hover{
     align-items: center; // Center horizontally
     justify-content: center; // Center vertically
 }
-hr{
+
+hr {
     width: 100%;
 }
+
 .cijena {
     align-self: flex-end;
     text-align: right;
     margin: 0.5rem;
 }
+
 .naziv {
     height: 2.45em; // Adjust height to fit two lines of text
     overflow: hidden;
@@ -51,32 +56,38 @@ hr{
     text-align: center; // Center text horizontally
 
 }
+
 .kategorije {
-    display: grid;
-    height: 4rem; // Adjust height to fit two rows of text
-    grid-template-columns: repeat(3, 1fr); // Display 3 items per row
-    gap: 0.1rem; // Adjust gap between items
-    overflow-x: hidden;
-    overflow-y: auto; // Make the div scrollable if it overflows
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    align-items: flex-start;
+    text-align: left;
 }
+
 .kategorije span {
-    
     white-space: nowrap;
     padding: 0;
     margin: 0;
-    width: 100px;
+    width: 100%;
+    /* Make each span fill the full width */
+    text-align: center;
+    /* Center text within each span */
 }
-.content ::ng-deep app-button{
-    width: 80%;
+
+.content ::ng-deep app-button {
+    width: 100%;
     height: 100%;
 }
-.content ::ng-deep app-button button span{
+
+.content ::ng-deep app-button button span {
     font-size: 0.8rem;
     height: fit-content !important;
 }
-.content ::ng-deep app-button button{
+
+.content ::ng-deep app-button button {
     height: 1.5rem !important;
-    width: 95px;
+    width: fit-content !important;
     background-color: #FFF;
     border-radius: 0.72rem;
     margin: 0.2rem;
