--- a/frontend/src/app/components/home-page/home-page.component.html
+++ b/frontend/src/app/components/home-page/home-page.component.html
@@ -1,30 +1,67 @@
-
-<!-- display all oglasi -->
-<ul>
-    <li *ngFor="let oglas of oglasi">
-        <a (click)="prikaziDetalje(oglas)">
+<div class="homepage-container">
+    <div class="filter-panel">
+      <h3>Filter by:</h3>
+  
+      <div class="filter-section">
+        <h4>Categories</h4>
+        <ul>
+          <li *ngFor="let category of categories">
+            <label>
+              <input 
+                type="checkbox" 
+                [value]="category.category_name" 
+                (change)="toggleCategoryFilter(category.category_name)" 
+              />
+              {{ category.category_name }}
+            </label>
+          </li>
+        </ul>
+      </div>
+  
+      <div class="filter-section">
+        <h4>Subcategories</h4>
+        <ul>
+          <li *ngFor="let subcategory of subcategories">
+            <label>
+              <input 
+                type="checkbox" 
+                [value]="subcategory.subcategory_name" 
+                (change)="toggleSubcategoryFilter(subcategory.subcategory_name)" 
+              />
+              {{ subcategory.subcategory_name }}
+            </label>
+          </li>
+        </ul>
+      </div>
+  
+      <button (click)="resetFilters()" class="reset-button">Reset Filters</button>
+    </div>
+  
+    <div class="listings-container">
+      <ul>
+        <li *ngFor="let oglas of filteredListings">
+          <a (click)="prikaziDetalje(oglas)">
             <img src="assets/images/oglasi/oglas1.jpg" alt="">
             <div class="content">
-                <div class="naziv">
-                   {{oglas.title}}
-                </div>
-                <hr>
-                <div class="kategorije">
-                    <!-- <span *ngFor="let kategorija of oglas.kategorije">
-                        <app-button [text]="kategorija"></app-button>
-                    </span> -->
-                    <span>
-                        <app-button [text]="oglas.category.category_name"></app-button>
-                    </span>
-                    <span>
-                        <app-button [text]="oglas.subcategory.subcategory_name"></app-button>
-                    </span>
-                </div>
-                <div class="cijena">
-                    {{oglas.price}} EUR
-                </div>
+              <div class="naziv">
+                {{ oglas.title }}
+              </div>
+              <hr>
+              <div class="kategorije">
+                <span>
+                  <app-button [text]="oglas.category.category_name"></app-button>
+                </span>
+                <span>
+                  <app-button [text]="oglas.subcategory.subcategory_name"></app-button>
+                </span>
+              </div>
+              <div class="cijena">
+                {{ oglas.price }} EUR
+              </div>
             </div>
-        </a>
-    </li>
-</ul>
-
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  
