--- a/frontend/src/app/components/home-page/home-page.component.scss
+++ b/frontend/src/app/components/home-page/home-page.component.scss
@@ -9,7 +9,7 @@ ul {
 
 ul li a {
     height: wrap-content;
-    width: 20rem;
+    width: fit-content;
     // padding-bottom: 2rem;
     border: 2.5px solid whitesmoke;
     border-radius: 1rem;
