--- a/frontend/src/app/components/home-page/home-page.component.html
+++ b/frontend/src/app/components/home-page/home-page.component.html
@@ -7,10 +7,10 @@
         <ul>
           <li *ngFor="let category of categories">
             <label>
-              <input 
-                type="checkbox" 
-                [value]="category.category_name" 
-                (change)="toggleCategoryFilter(category.category_name)" 
+              <input
+                type="checkbox"
+                [value]="category.category_name"
+                (change)="toggleCategoryFilter(category.category_name)"
               />
               {{ category.category_name }}
             </label>
@@ -18,17 +18,17 @@
         </ul>
       </div>
   
-      <div class="filter-section">
+      <div class="filter-section" *ngIf="subcategories.length > 0">
         <h4>Subcategories</h4>
         <ul>
           <li *ngFor="let subcategory of subcategories">
             <label>
-              <input 
-                type="checkbox" 
-                [value]="subcategory.subcategory_name" 
-                (change)="toggleSubcategoryFilter(subcategory.subcategory_name)" 
+              <input
+                type="checkbox"
+                [value]="subcategory"
+                (change)="toggleSubcategoryFilter(subcategory)"
               />
-              {{ subcategory.subcategory_name }}
+              {{ subcategory}}
             </label>
           </li>
         </ul>
@@ -43,21 +43,13 @@
           <a (click)="prikaziDetalje(oglas)">
             <img src="assets/images/oglasi/oglas1.jpg" alt="">
             <div class="content">
-              <div class="naziv">
-                {{ oglas.title }}
-              </div>
+              <div class="naziv">{{ oglas.title }}</div>
               <hr>
               <div class="kategorije">
-                <span>
-                  <app-button [text]="oglas.category.category_name"></app-button>
-                </span>
-                <span>
-                  <app-button [text]="oglas.subcategory.subcategory_name"></app-button>
-                </span>
+                <span><app-button [text]="oglas.category.category_name"></app-button></span>
+                <span><app-button [text]="oglas.subcategory.subcategory_name"></app-button></span>
               </div>
-              <div class="cijena">
-                {{ oglas.price }} EUR
-              </div>
+              <div class="cijena">{{ oglas.price }} EUR</div>
             </div>
           </a>
         </li>
