--- a/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/components/user-profile/user-profile.component.html
@@ -48,7 +48,7 @@
             <div class="profile-picture-container">
               <label for="profilePicture">
                 <img
-                  src=""
+                  src="http://127.0.0.1:8000/{{user.profile_image}}"
                   alt="Profile Picture"
                   class="profile-picture"
                   title="Click to upload a new picture"
