--- a/frontend/src/app/components/home-page/home-page.component.html
+++ b/frontend/src/app/components/home-page/home-page.component.html
@@ -41,7 +41,7 @@
       <ul>
         <li *ngFor="let oglas of filteredListings">
           <a (click)="prikaziDetalje(oglas)">
-            <img src="http://127.0.0.1:8000/{{oglas.images}}" alt="">
+            <img src="http://127.0.0.1:8000/{{oglas.images[0]}}" alt="">
             <div class="content">
               <div class="naziv">{{ oglas.title }}</div>
               <hr>
