pokusaj popravke apija za dodavanje listinga

--- a/frontend/src/app/components/add-listing/add-listing.component.html
+++ b/frontend/src/app/components/add-listing/add-listing.component.html
@@ -57,7 +57,7 @@
         <div class="image-preview-container">
           <div class="image-preview" *ngFor="let preview of imagePreviews; let i = index">
             <img [src]="preview" alt="Image preview" />
-            <button type="button" (click)="removeImage(i)">Remove</button>
+            <button type="button" (click)="removeImage(i)"></button>
           </div>
         </div>
         <input type="file" accept="image/*" multiple (change)="onImageChange($event)" />
